# wya

build-desktop-Desktop-Debug/: Makefile  moc_authwidget.cpp  moc_creategroupbox.cpp  moc_friendstabwidget.cpp  moc_globalsearchgroupbox.cpp  moc_groupbox.cpp  moc_groupchatdialog.cpp  moc_groupstabwidget.cpp  moc_lobbywidget.cpp  moc_messagebox.cpp  moc_wyawidget.cpp  ui_authwidget.h  ui_creategroupbox.h  ui_friendstabwidget.h  ui_globalsearchgroupbox.h  ui_groupbox.h  ui_groupchatdialog.h  ui_groupstabwidget.h  ui_lobbywidget.h  (+2 more)
server/: CMakeLists.txt  server.pro
server/include/db/: database_config.h  database_connections.h
server/include/handler/: accept_user_invite.h  add_friend.h  add_user.h  authorize.h  cancel_user.h  create_group.h  friends_and_groups.h  global_search.h  handler.h  join_group.h  register.h  reject_user_invite.h  send_to_friend.h  send_to_group.h
server/include/handler/ws/: on_message.h
server/include/net/: online_users.h
server/include/types/: action.h
server/postgres/: create_auth_table.psql  create_friends_table.psql  create_groups_table.psql  create_invites_table.psql  create_users_groups_table.psql  create_users_table.psql
server/src/: main.cpp
server/src/db/: database_config.cpp  database_connections.cpp
server/src/handler/: accept_user_invite.cpp  add_user.cpp  authorize.cpp  cancel_user.cpp  create_group.cpp  friends_and_groups.cpp  global_search.cpp  join_group.cpp  register.cpp  reject_user_invite.cpp  send_to_friend.cpp  send_to_group.cpp
server/src/handler/ws/: on_message.cpp
server/src/net/: online_users.cpp
(+77 files in other folders)
